syntax = "proto3";

package services;


option go_package = "github.com/ElioenaiFerrari/superapp/internal/services";

message GetCatalogRequest {
  int64 id = 1;
}

message Catalog {
  int64 id = 1;
  int64 restaurant_id = 2;
  string name = 3;
}

message ListCatalogsRequest {
  int64 restaurant_id = 1;
}

message ListCatalogsResponse {
  repeated Catalog catalogs = 1;
}

message GetCatalogQRCodeResponse {
  bytes qr_code = 1;
}

service CatalogService {
  rpc GetCatalog(GetCatalogRequest) returns (Catalog) {}
  rpc ListCatalogs(ListCatalogsRequest) returns (ListCatalogsResponse) {}
  rpc GetCatalogQRCode(GetCatalogRequest) returns (GetCatalogQRCodeResponse) {}
}