syntax = "proto3";

package services;

option go_package = "github.com/ElioenaiFerrari/superapp/internal/services";

enum OrderStatus {
  CREATED = 0;
  PLACED = 1;
  CONFIRMED = 2;
  DECLINED = 3;
  ARRIVED = 4;
  CONCLUDED = 5;
  CANCELLED = 6;
}

message Order {
  int64 id = 1;
  repeated int64 plate_ids = 2;
  int64 user_id = 3;
  int64 restaurant_id = 4;
  int64 price = 5;
  OrderStatus status = 6;
}

message CreateOrderRequest {
  repeated int64 plate_ids = 1;
  int64 user_id = 2;
}

message GetOrderRequest {
  int64 id = 1;
}

message ListOrdersRequest {
  int64 restaurant_id = 1;
  int64 user_id = 2;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order) {}
  rpc GetOrder(GetOrderRequest) returns (Order) {}
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
}